--- a/clienteXapi/src/app/reporte-xapi/reporte-xapi.component.html
+++ b/clienteXapi/src/app/reporte-xapi/reporte-xapi.component.html
@@ -96,6 +96,15 @@
         </form>    
     </div>
 
+    <!-- Reporte 1-->
+    <br/>
+    <div id="reporte1">
+            <ul>
+                <li *ngFor="let parcial of learningReport1" ><pre>{{parcial.originalJSON}}</pre></li>
+            </ul>      
+    </div>
+
+
     <!-- FIN de Autocomplete el 9dic16  -->
     <br/>
     <footer id="pie">
