--- a/clienteXapi/src/app/reporte-xapi/reporte-xapi.component.css
+++ b/clienteXapi/src/app/reporte-xapi/reporte-xapi.component.css
@@ -136,5 +136,16 @@ section ul li{
     border-color: lightgray;
     width: 40%;
     padding-left: 20px;
-    padding-right: 20px
+    padding-right: 20px;
+    float:left
+}
+
+#autocompleteVerbo{
+    border-style: solid;
+    border-width: 1px;
+    border-color: lightgray;
+    width: 40%;
+    padding-left: 20px;
+    padding-right: 20px;
+    float: right;
 }
