--- a/clienteXapi/src/app/reporte-xapi/reporte-xapi.component.html
+++ b/clienteXapi/src/app/reporte-xapi/reporte-xapi.component.html
@@ -85,7 +85,7 @@
     <!-- Autocomplete nombres-->
     <br/>
     <div id="autocomplete">
-        <form  [formGroup]="searchForm">
+        <form  [formGroup]="searchForm" >
             <label for="searchField">Buscar "actor" por nombre (Autocomplete)</label>
             <br/>
             <input type="text" id="searchField" name="searchField"
@@ -93,7 +93,19 @@
             <ul>
                 <li *ngFor="let result of results | async" (click)="clickGuardarNombre(result)">{{result.actor.name}}</li>
             </ul>     
-        </form>    
+        </form>     
+    </div>
+
+    <div id="autocompleteVerbo">
+        <form  [formGroup]="searchForm">
+            <label for="searchField">Buscar "verbo" por URI (Autocomplete)</label>
+            <br/>
+            <input type="text" id="searchField" name="searchField"
+                                        [formControl]="searchForm.controls['searchField']"> 
+            <ul>
+                <li *ngFor="let result of results | async" (click)="clickGuardarNombre(result)">{{result.actor.name}}</li>
+            </ul>     
+        </form>   
     </div>
 
     <!-- Reporte 1-->
@@ -103,13 +115,13 @@
                 <li *ngFor="let parcial of learningReport1" ><pre>{{parcial.originalJSON}}</pre></li>
             </ul>      
     </div>
-
-
     <!-- FIN de Autocomplete el 9dic16  -->
-    <br/>
-    <footer id="pie">
-        <section>
-            © 2016 Diseñador: Juan Miguel Navarro Lopez
-        </section>
-    </footer>
+    <div>
+        <br/>
+        <footer id="pie">
+            <section>
+                © 2016 Diseñador: Juan Miguel Navarro Lopez
+            </section>
+        </footer>
+    </div>
 </div>
