--- a/clienteXapi/src/app/reporte-xapi/reporte-xapi.component.css
+++ b/clienteXapi/src/app/reporte-xapi/reporte-xapi.component.css
@@ -137,7 +137,6 @@ section ul li{
     width: 40%;
     padding-left: 20px;
     padding-right: 20px;
-    float:left
 }
 
 #autocompleteVerbo{
@@ -148,4 +147,11 @@ section ul li{
     padding-left: 20px;
     padding-right: 20px;
     float: right;
+}
+
+#inlinedisplay {
+  display: inline-block;
+  width: 200px;
+  height: 100px;
+  margin: 1em;
 }
