--- a/clienteXapi/src/app/reporte-xapi/reporte-xapi.component.html
+++ b/clienteXapi/src/app/reporte-xapi/reporte-xapi.component.html
@@ -1,4 +1,8 @@
 <div class="container" id="contenedor">
+
+    <!-- Cargar el modulo de tabla de actors -->
+    <app-actors> Cargando Actors ui </app-actors>
+
   <h1>
   {{title}}
   </h1>
