--- a/clienteXapi/src/app/actors/actors.component.html
+++ b/clienteXapi/src/app/actors/actors.component.html
@@ -2,7 +2,7 @@
   <h1>
   {{title}}
   </h1>
-
+  <input type="button" class="btn btn-primary" id="recargaColeccionActors" value="Refrescar coleccion de Actors" (click)="clickRecargaColeccionActors()"/>
   <!-- Tabla mostrando la DB de Actors -->
     <section id="tablaPeliculas">
         <!-- table border="2" -->
