--- a/clienteXapi/src/app/actors/actors.component.html
+++ b/clienteXapi/src/app/actors/actors.component.html
@@ -1,8 +1,10 @@
 <div class="container" id="contenedor">
-  <h1>
+  <h3>
   {{title}}
-  </h1>
+  </h3>
   <input type="button" class="btn btn-primary" id="recargaColeccionActors" value="Refrescar coleccion de Actors" (click)="clickRecargaColeccionActors()"/>
+  <br/>
+  <br/>
   <!-- Tabla mostrando la DB de Actors -->
     <section id="tablaPeliculas">
         <!-- table border="2" -->
@@ -25,4 +27,35 @@
             </table>
         </div>
     </section>
+
+  <h3>
+  {{title2}}
+  </h3>
+  <input type="button" class="btn btn-primary" id="recargaColeccionActors" value="Refrescar coleccion de Verbs" (click)="clickRecargaColeccionActors()"/>
+  <br/>
+  <br/>
+  <!-- Tabla mostrando la DB de Actors -->
+    <section id="tablaPeliculas">
+        <!-- table border="2" -->
+        <div class="table-responsive">
+            <table class="table table-striped table-bordered table-hover table-condensed">                
+                <thead>
+                    <tr>
+                        <th>Syllabus</th>
+                        <th>URI</th>
+                        <th>Tipo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let datoVerbo of arrayVerbos, let i = index;">
+                      <td>{{datoVerbo.verbo.display}}</td>
+                      <td>{{datoVerbo.verbo.id}}</td>
+                      <td>{{datoVerbo.verbo.LOG_SRC}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
+
+
 </div>
