--- a/clienteXapi/src/app/actors/actors.component.html
+++ b/clienteXapi/src/app/actors/actors.component.html
@@ -31,10 +31,10 @@
   <h3>
   {{title2}}
   </h3>
-  <input type="button" class="btn btn-primary" id="recargaColeccionActors" value="Refrescar coleccion de Verbs" (click)="clickRecargaColeccionActors()"/>
+  <input type="button" class="btn btn-primary " id="recargaColeccionActors" value="Refrescar coleccion de Verbs" (click)="clickRecargaColeccionActors()"/>
   <br/>
   <br/>
-  <!-- Tabla mostrando la DB de Actors -->
+  <!-- Tabla mostrando la DB de Verbos -->
     <section id="tablaPeliculas">
         <!-- table border="2" -->
         <div class="table-responsive">
@@ -57,5 +57,32 @@
         </div>
     </section>
 
-
+  <h3>
+  {{title3}}
+  </h3>
+  <input   type="button" class="btn btn-primary  " id="xxx" value="Refrescar coleccion de Targets" (click)="clickRecargaColeccionActors()"/>
+  <br/>
+  <br/>
+  <!-- Tabla mostrando la DB de Targets/objects -->
+    <section id="tablaPeliculas">
+        <!-- table border="2" -->
+        <div class="table-responsive">
+            <table class="table table-striped table-bordered table-hover table-condensed">                
+                <thead>
+                    <tr>
+                        <th>tipo</th>
+                        <th>definicion</th>
+                        <th>uri</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let datoTarget of arrayTargets, let i = index;">
+                      <td>{{datoTarget.objeto.objectType}}</td>
+                      <td>{{datoTarget.objeto.definition}}</td>
+                      <td>{{datoTarget.objeto.id}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
 </div>
