1 marzo, activity-tree componente basico

--- a/clienteXapi/src/app/reporte-xapi/reporte-xapi.component.html
+++ b/clienteXapi/src/app/reporte-xapi/reporte-xapi.component.html
@@ -1,5 +1,9 @@
 <div class="container" id="contenedor">
 
+
+    <!-- Cargar el modulo de arbol de actividades -->
+    <app-activity-tree> Cargando Actors ui </app-activity-tree>
+
     <!-- Cargar el modulo de tabla de actors -->
     <app-actors> Cargando Actors ui </app-actors>
 
