--- a/clienteXapi/src/styles.css
+++ b/clienteXapi/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+@import "../node_modules/primeng/resources/themes/omega/theme.css";
+@import "../node_modules/primeng/resources/primeng.min.css";
+@import "../font-awesome-4.7.0/font-awesome-4.7.0/css/font-awesome.min.css"
