--- a/clienteXapi/src/app/activity-tree/activity-tree.component.html
+++ b/clienteXapi/src/app/activity-tree/activity-tree.component.html
@@ -13,3 +13,11 @@
       <div style="margin-top:8px">Selected Node: {{selectedFile3 ? selectedFile3.label : 'none'}}</div>
   </div>
 </div>
+
+
+<p-treeTable [value]="files1">
+    <p-header>Basic</p-header>
+    <p-column field="name" header="Name"></p-column>
+    <p-column field="size" header="Size"></p-column>
+    <p-column field="type" header="Type"></p-column>
+</p-treeTable>
