--- a/clienteXapi/src/app/activity-tree/activity-tree.component.html
+++ b/clienteXapi/src/app/activity-tree/activity-tree.component.html
@@ -1,13 +1,22 @@
 <div class="container" id="contenedor">
-  <h3>
-  {{title}}
-  </h3>
-  <!--pre>{{arbolJson}}</pre-->
+
+  <br/>
+  <br/>
+  <input type="button" class="btn btn-primary" id="selecionarActivity" value="Seleccionar activity" 
+                    (click)="selecionarActivity = !selecionarActivity"/>
 
 
-  <div class="content-section implementation">
+
+
+  <div class="content-section implementation"  *ngIf="selecionarActivity">
+
+        <h4>
+        {{title}}
+        </h4>
+
       <p-growl [value]="msgs"></p-growl>
 
+      <!-- tabla con arbol de actividades -->
       <p-tree [value]="filesTree8" (onNodeSelect)="nodeSelect($event)"
             layout="horizontal" selectionMode="single" [(selection)]="selectedFile3" ></p-tree>
       <div style="margin-top:8px">Selected Node: {{selectedFile3 ? selectedFile3.label : 'none'}}</div>
