push final el 2 marzo

--- a/clienteXapi/src/app/actors/actors.component.html
+++ b/clienteXapi/src/app/actors/actors.component.html
@@ -61,6 +61,9 @@
         </div>
     </section>
 
+
+
+<!-- NOTA: ESTA TABLA NO SE MUESTRA. EN SU LUGAR SE MUESTRA EL TREE-HORIZONTAL DE ACTIVITY-TREE.COMPONENT -->
  <div  class="elementoOculto"  >
   <h3>
   {{title3}}
