--- a/clienteXapi/src/app/activity-tree/activity-tree.component.html
+++ b/clienteXapi/src/app/activity-tree/activity-tree.component.html
@@ -21,7 +21,7 @@
             layout="horizontal" selectionMode="single" [(selection)]="selectedFile3" ></p-tree>
       <div style="margin-top:8px">Selected Node: {{selectedFile3 ? selectedFile3.label : 'none'}}</div>
 
-
+        <!-- ESTE COMPONENTE NO SE MUESTRA -->
         <div class="elementoOculto"  >
             <h3>Single Selection</h3>
             <p-tree [value]="filesTree2" selectionMode="single" [(selection)]="selectedFile" 
